# basics-of-layout

./: README.md  abc.html  pyproject.toml  Задание 2.html
Задание 1/: Главная.html  Каталог.html  Категория 1.html  Контакты.html
Задание2/: задание 2.py
