[tool.poetry]
name = "pythonproject9"
version = "0.1.0"
description = ""
authors = ["SurPetrosian <surach2020@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
